# ST-SLidR

./: .gitignore  INSTALL.md  README.md  downstream.py  evaluate.py  post_pretrain.py  pretrain.py  pyproject.toml  superpixel_segmenter.py
config/downstream/kitti/semseg/: semseg_kitti.yaml
config/downstream/nuscenes/semseg/: semseg_nuscenes.yaml
config/pretrain/nuscenes/: base_nuscenes.yaml
config/pretrain/nuscenes/mods/: nuscenes_mini.yaml
config/pretrain/nuscenes/ppkt/: ppkt.yaml
config/pretrain/nuscenes/slidr/: base_slidr.yaml  slidr_dino.yaml  slidr_moco.yaml  slidr_obow.yaml  slidr_swav.yaml  stslidr_classbalance_dino.yaml  stslidr_classbalance_moco.yaml  stslidr_classbalance_obow.yaml  stslidr_classbalance_swav.yaml  stslidr_moco.yaml  stslidr_swav.yaml
docker/: Dockerfile  build.sh  convert_docker2sif.md  run.sh
downstream/: dataloader_kitti.py  dataloader_nuscenes.py  evaluate.py  lightning_datamodule.py  lightning_trainer.py  model_builder.py
model/: image_model.py  res16unet.py  spconv_backbone.py
pretrain/: criterion.py  dataloader_nuscenes.py  lightning_datamodule.py  lightning_trainer.py  model_builder.py
scripts/: cc_pretrain.sh  dgx_pretrain.sh
utils/: checkpoint_utils.py  downstream_utils.py  finetuning_utils.py  log_utils.py  read_config.py  transforms.py
visualization/: analyze_superpixels_with_lidar_gt.py  generate_masks.py  lidar_to_image.py  plot_stats.py  superpixel_similarity.py
